[gd_scene load_steps=3 format=3 uid="uid://c2wwlln6aogps"]

[ext_resource type="Script" path="res://game/character/ai/combat/hostile_detection/hostile_detection.gd" id="1_3006j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m0vm4"]
radius = 607.403

[node name="HostileDetection" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_3006j")

[node name="DetectionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_m0vm4")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
